<?php
namespace Mapbender\SearchBundle\Entity;

/**
 * Class SearchQuery
 *
 * @package Mapbender\SearchBundle\Entity
 */
class QueryCondition
{
    protected $name;

    /**
     * QueryCondition constructor.
     */
    public function __construct() {


    }
}